validation/external-data-provider-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sexternaldatavalidation
spec:
  crd:
    spec:
      names:
        kind: K8sExternalDataValidation
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sexternaldata

        violation[{"msg": msg}] {
          # una por request
          # name_image := sprintf("%s|%s", [input.review.object.spec.containers[i].image, input.review.object.spec.containers[i].name])

          #todo en una
          name_image := [img_name | img = input.review.object.spec.containers[i].image; name = input.review.object.spec.containers[i].name; img_name = sprintf("%s|%s", [img, name])]  

          # send external data request
          response := external_data({"provider": "external-data-provider", "keys": name_image})

          response_with_error(response)

          msg := sprintf("invalid response: %v", [response])
        }

        response_with_error(response) {
          count(response.errors) > 0
          errs := response.errors[_]
          contains(errs[1], "_invalid")
        }

        response_with_error(response) {
          count(response.system_error) > 0
        }
